--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-sx-12">
+    <div class="col-xs-12">
         <button class="btn btn-success">New Recipe</button>
     </div>
 </div>
 <hr>
 <div class="row">
-    <div class="col-sx-12">
+    <div class="col-xs-12">
         <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
             <div class="pull-left">
                 <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
