--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-    <div class="col-sx-12">
-        <img src="" alt="" class="img-responsive">
+    <div class="col-xs-12">
+        <img [src]="recipe.imagepath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 300px;">
     </div>
 </div>
 <div class="row">
-    <div class="col-sx-12">
-        <h1>Recipe name</h1>
+    <div class="col-xs-12">
+        <h1>{{ recipe.name }}</h1>
     </div>
 </div>
 <div class="row">
-    <div class="col-sx-12">
+    <div class="col-xs-12">
         <div class="btn-group">
             <button class="btn btn-primary dropdown-toggle">
                 Manage Recipe <span class="caret"></span>
@@ -23,12 +23,12 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sx-12">
-        Desctiption
+    <div class="col-xs-12">
+        {{ recipe.description }}
     </div>
 </div>
 <div class="row">
-    <div class="col-sx-12">
+    <div class="col-xs-12">
         Ingredients
     </div>
 </div>
