--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,56 @@
-<p>recipe-edit works!</p>
+<div class="row">
+	<div class="col-sx-12">
+		<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+			<div class="row">
+				<div class="col-xs-12">
+					<button type="submit" class="btn btn-success">Save</button>
+					<button type="submit" class="btn btn-danger">Cancel</button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input type="text" id="name" class="form-control" formControlName="name">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="form-group">
+							<label for="imagePath">Image URL</label>
+							<input type="text" id="imagePath" class="form-control" formControlName="imagePath">
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12">
+							<img src="" alt="" class="img-responsive">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12">
+								<div class="form-group">
+									<label for="description">Description</label>
+									<textarea type="text" id="description" rows="6" formControlName="description" class="form-control"></textarea>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12">
+								<div class="row">
+									<div class="col-xs-8">
+										<input type="text" id="name" class="form-control">
+									</div>
+										<div class="col-xs-2">
+											<input type="text" id="name" class="form-control">
+										</div>
+											<div class="col-xs-2">
+												<button class="btn btn-danger">X</button>
+											</div>
+								</div>
+							</div>
+						</div>
+		</form>
+	</div>
+</div>
