--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,8 +3,8 @@
 		<form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
 			<div class="row">
 				<div class="col-xs-12">
-					<button type="submit" class="btn btn-success">Save</button>
-					<button type="submit" class="btn btn-danger">Cancel</button>
+					<button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+					<button type="submit" class="btn btn-danger" (click)="onCancel()">Cancel</button>
 				</div>
 			</div>
 			<div class="row">
@@ -19,13 +19,13 @@
 					<div class="col-xs-12">
 						<div class="form-group">
 							<label for="imagePath">Image URL</label>
-							<input type="text" id="imagePath" class="form-control" formControlName="imagePath">
+							<input type="text" id="imagePath" #imagePath class="form-control" formControlName="imagePath">
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-12">
-							<img src="" alt="" class="img-responsive">
+							<img [src]="imagePath.value" alt="" class="img-responsive">
 							</div>
 						</div>
 						<div class="row">
@@ -37,17 +37,25 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-12">
-								<div class="row">
+							<div class="col-xs-12" formArrayName="ingredients">
+								<div class="row" 
+								*ngFor="let ingredientCtrl of getControls(recipeForm, 'ingredients'); let i = index"
+            						[formGroupName]="i"
+            						style="margin-top: 10px;">
 									<div class="col-xs-8">
-										<input type="text" id="name" class="form-control">
+										<input type="text" id="name" class="form-control" formControlName="name">
 									</div>
 										<div class="col-xs-2">
-											<input type="text" id="name" class="form-control">
+											<input type="text" id="amount" class="form-control" formControlName="amount">
 										</div>
 											<div class="col-xs-2">
-												<button class="btn btn-danger">X</button>
+												<button type="button" (click)="onDeleteIngredient(i)" class="btn btn-danger">X</button>
 											</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-12">
+										<button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+									</div>
 								</div>
 							</div>
 						</div>
