--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="recipe.imagepath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 300px;">
-    </div>
+        <img
+        [src]="recipe.imagepath"
+        alt="{{ recipe.name }}"
+        class="img-responsive"
+        style="max-height: 300px;"></div>
 </div>
 <div class="row">
     <div class="col-xs-12">
